--- a/autossh-comfyui@.service
+++ b/autossh-comfyui@.service
@@ -10,7 +10,7 @@ EnvironmentFile=/etc/autossh-comfyui.env
 Environment=AUTOSSH_GATETIME=0
 Environment=AUTOSSH_POLL=600
 Environment=AUTOSSH_LOGLEVEL=7
-ExecStart=/usr/bin/autossh -M 0 -N -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes -R %i:localhost:${LOCAL_PORT} ${REMOTE_HOST}
+ExecStart=/usr/bin/autossh -M 0 -N -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o ExitOnForwardFailure=yes -F /home/${RUN_USER}/.ssh/config -o StrictHostKeyChecking=accept-new -R %i:localhost:${LOCAL_PORT} ${REMOTE_HOST}
 Restart=always
 RestartSec=5
 StandardOutput=journal
